# SeaSloth

./: .gitignore  CLAUDE.md  README.md  asv.conf.json  pyproject.toml
.github/workflows/: benchmark.yml  data_health.yml  publish.yml
benchmarks/: __init__.py  data_config.json  link_config.json
benchmarks/common/: config.py  marks.py  memtrack.py  synthetic_data.py
benchmarks/crocodash/: bench_imports.py  bench_obc.py  bench_raw_data_access.py  test_obc.py
benchmarks/e2e/: bench_case_workflow.py
benchmarks/esmf/: bench_regrid_apply.py  bench_weights_generate.py  test_regrid_apply.py  test_weights_generate.py
benchmarks/mom6_forge/: bench_grid_kdtree.py  bench_grid_metrics.py  bench_regrid_subsampling.py  bench_runoff_mapping.py  bench_topo.py  bench_topo_regrid.py  bench_topo_tidy.py  test_topo.py
benchmarks/xesmf/: bench_regrid_apply.py  bench_regridder_apply.py  bench_regridder_creation.py  bench_weights_generate.py  test_regrid_apply.py  test_weights_generate.py
docs/: adding_benchmarks.md  how_benchmarking_works.md  mom6_scaling_setup.md
results/: benchmarks.json  health.json  latest.json  mom6_scaling.json
results/Windows11LenovoGramWSL/: machine.json
results/crlogin2/: 0ba2ccb0-conda-py3.11-numpy-psutil-xarray-xesmf.json  machine.json  (+5 more)
scripts/: check_data_access.py  check_links.py  configure.sh  generate_health_page.py  generate_health_report.py  generate_report.py  generate_scaling_report.py  pbs_data_health.sh  pbs_submit.sh  publish.sh  report_common.py  run_bench.sh  run_benchmarks.sh  run_fast.sh  run_full.sh
(+36 files in other folders)
