[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "seasloth"
version = "0.1.0"
description = "Performance benchmarking suite for the CROC ocean modeling ecosystem"
requires-python = ">=3.11"
dependencies = [
    "pytest>=7",
    "pytest-benchmark>=4",
    "psutil",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmarks*"]

[tool.pytest.ini_options]
markers = [
    "light: smallest parameter combo in a sweep — fast smoke test",
    "heavy: full-size parameter combo — the real benchmark numbers",
]
